Replaces sidebar menu with minimenu to avoid crappy ui on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,13 @@
   padding: 10px;
 }
 
+.minimenu__bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.minimenu__item {
+  margin: 1px;
+  width: 100%;
+}
